--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -12,12 +12,7 @@
     <string name="action_view">View</string>
     <string name="action_add">Add</string>
     
-    <string name="title">Title</string>
-    <string name="description">Description</string>
-    <string name="url">URL</string>
-    <string name="director">Director</string>
-    
-    <plurals name="moviez">
+    <plurals name="movie_deleted">
         <item quantity="one">One Movie Deleted</item>
         <item quantity="other">%d Movies Deleted</item>
     </plurals>
